// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should render 1`] = `
<DocumentFragment>
  <div
    class="flex overflow-hidden rounded-lg bg-theme-warning"
  >
    <div
      class="flex items-center justify-center w-24 sc-AxjAm iVJDF text-theme-warning bg-theme-warning-200"
    >
      <svg
        class="w-8 h-8"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 10C0 4.5 4.5 0 10 0s10 4.5 10 10-4.5 10-10 10S0 15.5 0 10zm2 0c0 4.4 3.6 8 8 8s8-3.6 8-8-3.6-8-8-8-8 3.6-8 8zm7 4c0-.6.4-1 1-1s1 .4 1 1-.4 1-1 1-1-.4-1-1zm0-3V6c0-.6.4-1 1-1s1 .4 1 1v5c0 .6-.4 1-1 1s-1-.4-1-1z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="flex-1 pl-5 sc-AxjAm dTjIvi bg-theme-warning-100"
    >
      <div
        class="flex flex-col justify-center"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert should render a large one 1`] = `
<div>
  <div
    class="flex overflow-hidden rounded-lg bg-theme-warning"
  >
    <div
      class="flex items-center justify-center w-24 sc-AxjAm bLURlN text-theme-warning bg-theme-warning-200"
    >
      <svg
        class="w-8 h-8"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 10C0 4.5 4.5 0 10 0s10 4.5 10 10-4.5 10-10 10S0 15.5 0 10zm2 0c0 4.4 3.6 8 8 8s8-3.6 8-8-3.6-8-8-8-8 3.6-8 8zm7 4c0-.6.4-1 1-1s1 .4 1 1-.4 1-1 1-1-.4-1-1zm0-3V6c0-.6.4-1 1-1s1 .4 1 1v5c0 .6-.4 1-1 1s-1-.4-1-1z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="flex-1 pl-5 sc-AxjAm dTjIvi bg-theme-warning-100"
    >
      <div
        class="flex flex-col justify-center"
      />
    </div>
  </div>
</div>
`;

exports[`Alert should render a small one 1`] = `
<div>
  <div
    class="flex overflow-hidden rounded-lg bg-theme-warning"
  >
    <div
      class="flex items-center justify-center w-24 sc-AxjAm bEpGSJ text-theme-warning bg-theme-warning-200"
    >
      <svg
        class="w-8 h-8"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 10C0 4.5 4.5 0 10 0s10 4.5 10 10-4.5 10-10 10S0 15.5 0 10zm2 0c0 4.4 3.6 8 8 8s8-3.6 8-8-3.6-8-8-8-8 3.6-8 8zm7 4c0-.6.4-1 1-1s1 .4 1 1-.4 1-1 1-1-.4-1-1zm0-3V6c0-.6.4-1 1-1s1 .4 1 1v5c0 .6-.4 1-1 1s-1-.4-1-1z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="flex-1 pl-5 sc-AxjAm dTjIvi bg-theme-warning-100"
    >
      <div
        class="flex flex-col justify-center"
      />
    </div>
  </div>
</div>
`;
